fix(ui): Overlapping buttons at narrow screen widths (#5259)
* fix(ui): Prevent overlap of toolbar items with narrow browser windows. Other narrow window related fixes

--- a/ui/src/app/applications/components/application-details/application-details.scss
+++ b/ui/src/app/applications/components/application-details/application-details.scss
@@ -6,12 +6,15 @@
         left: 60px;
         right: 0;
         z-index: 2;
+        @media screen and (max-width: map-get($breakpoints, xlarge)) {
+            top: 150px;
+        }
     }
 
     .argo-dropdown__content.is-menu {
         max-height: 500px;
     }
-  
+
     &__tree {
         position: relative;
         padding: 1em;
@@ -19,6 +22,9 @@
         overflow-y: auto;
         margin-top: 100px;
         min-height: calc(100vh - 2 * 50px - 115px);
+        @media screen and (max-width: map-get($breakpoints, xlarge)) {
+            margin-top: 150px;
+        }
     }
 
     &__warning {
@@ -44,11 +50,12 @@
 
     &__tab-content-full-height {
         height: calc(100vh - 2 * 76px);
-        div.row, div.columns {
+        div.row,
+        div.columns {
             height: 100%;
         }
     }
-    
+
     &__container {
         position: relative;
         text-transform: uppercase;
@@ -93,7 +100,7 @@
         white-space: nowrap;
         i {
             cursor: pointer;
-            color:  $argo-color-gray-4;
+            color: $argo-color-gray-4;
             margin: 0 0.5em;
             &::before {
                 font-size: 1.5em;
@@ -130,6 +137,50 @@
         .columns.small-1.xxxlarge-1 {
             width: 60px;
             text-align: center;
+        }
+    }
+
+    @media screen and (max-width: map-get($breakpoints, xlarge)) {
+        .page__content-wrapper {
+            min-height: calc(100vh - 3 * 50px);
+        }
+        .top-bar.row {
+            display: block;
+            .top-bar__left-side,
+            .top-bar__right-side {
+                width: 100%;
+                max-width: 100%;
+                flex: auto;
+            }
+            .top-bar__left-side {
+                .argo-button {
+                    i {
+                        @media screen and (max-width: map-get($breakpoints, large)) {
+                            margin: 0 auto !important;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    @media screen and (max-width: map-get($breakpoints, large)) {
+        .top-bar.row {
+            .top-bar__left-side {
+                > div {
+                    display: flex;
+                    justify-content: center;
+                    height: 50px;
+                    align-items: center;
+                    .argo-button {
+                        height: 34px;
+                    }
+                }
+            }
+            .top-bar__right-side {
+                display: flex;
+                justify-content: center;
+            }
         }
     }
 
